Fix element spacing (not yet mobile responsive)

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,9 @@
 }
 
 body {
+    font-family: 'Roboto', sans-serif, 'Times New Roman';
     display: flex;
+    flex: 1;
     flex-direction: column;
     align-self: center;
     justify-content: center;
@@ -20,6 +22,8 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+    margin-left: 55px;
+    margin-right: 55px;
 }
 
 h1 {
@@ -30,7 +34,7 @@ h1 {
 ul {
     display: flex;
     list-style-type: none;
-    gap: 16px;
+    gap: 24px;
     color: #e5e7eb;   
 }
 
@@ -39,11 +43,13 @@ ul {
     color: #F9FaF8;
     font-size: 48px;
     font-weight: 900;
+    margin: 0;
 }
 
 #hero-secondary {
     color: #F9FaF8;
     font-size: 18px;
+    margin-bottom: 16px;
 }
 
 
@@ -51,6 +57,8 @@ ul {
     background-color: #3882F6;
     color: #F9FaF8;
     border-radius: 10px;
+    border: none;
+    padding: 12px;
     font-size: 20px;
     outline: 1px solid white;
 }
@@ -58,14 +66,17 @@ ul {
 .main-introduction {
     display: flex;
     justify-content:space-around;
-    padding: 50px;
+    padding: 0px;
+    margin: 50px;
 }
 
 .main-text { 
     display: flex;
     align-items: flex-start;
-    flex-direction: column;
     justify-content: center;
+    flex-direction: column;
+    margin: 10px;
+    max-width: 800px;
 }
 
 .middle-container {
@@ -95,6 +106,8 @@ ul {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 20px;
+    margin: 20px 0;
 }
 
 .img-text-container {
@@ -103,6 +116,9 @@ ul {
     justify-content: center;
     align-items: center;
     padding: 5px;
+    gap: 20px;
+    margin: 10px;
+    text-align: center;
 }
 
 .quote-container {
@@ -110,7 +126,8 @@ ul {
     font-size: 36px;
     font-style: italic;
     color: #1f2937;
-    padding: 50px;
+    padding: 90px;
+    margin: 20px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -124,7 +141,6 @@ ul {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 70%;
     background-color: #3882F6;
     color: #F9FaF8;
     padding: 50px;
@@ -132,12 +148,13 @@ ul {
     width: 70%;
     max-width: 70%;
     border-radius: 10px;
+    gap: 20px;
 }
 
 #bottom-main {
     font-size: 24px;
     font-weight: 700;
-    margin-bottom: 0;
+    margin: 0;
 }
 
 #bottom-secondary {
